<resources>
    <string name="app_name">SensoLab</string>
    <string name="ip_hint">192.168.1.1</string>
    <string name="menu_about">Créditos</string>
    <string name="menu_connect">Cambiar IP</string>
    <string name="adjust_item">Ajustes</string>
    <string name="share_item">Compartir</string>
    <string name="sensor_list">Listado de Sensores</string>
    <string name="sensor_1">Temperatura</string>
    <string name="sensor_2">Humedad</string>
    <string name="sensor_3">Distancia</string>
    <string name="sensor_4">Voltaje</string>
    <string name="sensor_5">Luz</string>
    <string name="arrow_alt">Continuar</string>
    <string name="viewFormat">Visualización:</string>
    <string name="table">Tabla</string>
    <string name="graph">Grafica</string>
    <string name="rhythm">Ritmo:</string>
    <string name="rhythm_fill">Tiempo en segundos</string>
    <string name="rhythm_hint">5s</string>
    <string name="fab_alt">Iniciar o detener captura</string>
    <string name="stop_alt">Finalizar captura</string>
    <string name="time">%1$s</string>
    <string name="value">%1$s</string>
    <string name="time_header">Tiempo (s)</string>
    <string name="value_header">%1$s</string>
</resources>