<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/adjust_item"
        android:icon="@drawable/settings_24px"
        android:title="@string/adjust_item"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/share_item"
        android:icon="@drawable/ios_share_24px"
        android:title="@string/share_item"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/connect_item"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_connect"
        app:showAsAction="never" />

    <item android:id="@+id/about_item"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>